# statistics

./: .gitattributes  .hgignore  CONTRIBUTE.md  CONTRIBUTING.md  COPYING  ClassificationSVM.m  DESCRIPTION  INDEX  INDEX.in  Makefile  NEWS  ONEWS  ONEWS-1.2.x  ONEWS-1.3.0  ONEWS-1.4.x  ONEWS-1.7.x  PKG_ADD  PKG_DEL  README.crosscompilation  README.md  anderson_darling_cdf.m  anderson_darling_test.m  anovan.m  boxplot.m  ff2n.m  fitcsvm.m  fullfact.m  geomean.m  harmmean.m  histfit.m  hmmestimate.m  hmmgenerate.m  hmmviterbi.m  io.github.gnu_octave.statistics.metainfo.xml  mad.m  mvnpdf.m  mvnrnd.m  nanmax.m  nanmean.m  nanmedian.m  (+15 more)
docs/: @ClassificationKNN_ClassificationKNN.html  @ClassificationKNN_predict.html  @RegressionGAM_RegressionGAM.html  @RegressionGAM_predict.html  @cvpartition_cvpartition.html  @cvpartition_display.html  @cvpartition_get.html  @cvpartition_repartition.html  @cvpartition_set.html  @cvpartition_test.html  @cvpartition_training.html  BetaDistribution.html  BinomialDistribution.html  BirnbaumSaundersDistribution.html  BurrDistribution.html  CalinskiHarabaszEvaluation.html  ClassificationDiscriminant.html  ClassificationGAM.html  ClassificationKNN.html  ClassificationNeuralNetwork.html  ClassificationPartitionedModel.html  ClassificationSVM.html  ClusterCriterion.html  CompactClassificationDiscriminant.html  CompactClassificationGAM.html  CompactClassificationNeuralNetwork.html  CompactClassificationSVM.html  ConfusionMatrixChart.html  DaviesBouldinEvaluation.html  ExhaustiveSearcher.html  ExponentialDistribution.html  ExtremeValueDistribution.html  GammaDistribution.html  GapEvaluation.html  GeneralizedExtremeValueDistribution.html  GeneralizedParetoDistribution.html  HalfNormalDistribution.html  InverseGaussianDistribution.html  KDTreeSearcher.html  LinearModel.html  (+456 more)
docs/assets/: custom.css
inst/: ClassificationNeuralNetwork.m  ClassificationSVM.m  CompactLinearModel.m  ConfusionMatrixChart.m  ExhaustiveSearcher.m  FormulaParser.m  GeneralizedLinearMixedModel.m  GeneralizedLinearModel.m  IsolationForest.m  LinearFormula.m  LinearMixedModel.m  LinearModel.m  LocalOutlierFactor.m  NonLinearModel.m  OneClassSVM.m  PKG_ADD  PKG_DEL  ReconstructionICA.m  SparseFiltering.m  __tbl_delim__.m  adtest.m  anderson_darling_cdf.m  anderson_darling_test.m  andrewsplot.m  anova.m  anova1.m  anova2.m  anovan.m  ansaribradley.m  bar3.m  bar3h.m  bartlett_test.m  barttest.m  bbscdf.m  bbsinv.m  bbspdf.m  bbsrnd.m  betafit.m  betalike.m  betastat.m  (+304 more)
inst/@ClassificationKNN/: ClassificationKNN.m  predict.m
inst/@RegressionGAM/: RegressionGAM.m  predict.m
inst/@classificationKNN/: classificationKNN.m
inst/@cvpartition/: cvpartition.m  display.m  get.m  multiway.m  repartition.m  set.m  test.m  training.m
inst/ANOVA/: myanova.m  myplot.m  mysummary.m
inst/Classification/: ClassificationGAM.m  (+12 more)
install-conditionally/: INDEX.in  README
src/: Makefile  Makefile.in  configure.ac  doc-cache  editDistance.cc  fcnn.cpp  fcnnpredict.cc  fcnntrain.cc  libsvmread.cc  libsvmwrite.cc  svm.cpp  svm.h  svm_model_octave.cc  svm_model_octave.h  svmpredict.cc  svmtrain.cc
utils/: conditional_installation.m  functions_to_install  update_index_file.m
(+1075 files in other folders)
